# hollywood

./: .coderabbit.yaml  .envrc  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SPEC.md  flake.nix  rust.nix
.github/workflows/: ci.yaml
adrs/: 0001-own-timeline-ir.md  0002-nle-format-strategy.md  0003-ffmpeg-next-media-io.md  0004-apalis-pipeline.md  0005-egui-desktop-gui.md  0006-audio-post-processing-stems.md  0007-auto-framing-native-transforms.md  0008-pipeline-stage-data-threading.md  0009-multi-source-sync-assembly.md  README.md
ai/skills/: .gitkeep
crates/assemble/: Cargo.toml
crates/assemble/src/: lib.rs
crates/detect/: Cargo.toml
crates/detect/src/: error.rs  lib.rs  silence.rs
crates/ffmpeg/: Cargo.toml
crates/ffmpeg/src/: decode.rs  error.rs  lib.rs  probe.rs
crates/gui/: Cargo.toml
crates/gui/src/: app.rs  export.rs  footage.rs  lib.rs  picker.rs  theme.rs
crates/hollywood-nle/src/: error.rs  lib.rs  xmeml.rs
crates/hollywood-nle/tests/: golden_xmeml.rs
crates/hollywood-nle/tests/golden/: two_clip_video_track.xml
crates/hollywood-timeline/: Cargo.toml
crates/hollywood-timeline/src/: asset.rs  error.rs  lib.rs  time.rs  timeline.rs  track.rs
crates/hollywood-timeline/tests/: properties.rs
crates/nle/: Cargo.toml
crates/nle/src/: error.rs  fcpxml.rs  lib.rs  otio.rs  xmeml.rs
crates/nle/tests/: golden_fcpxml.rs  golden_otio.rs  golden_xmeml.rs
crates/nle/tests/golden/: audio_cross_fade.xml  audio_only.fcpxml  timeline.otio  two_clip_video_track.xml  video_and_audio_tracks.fcpxml
crates/pipeline/: Cargo.toml
crates/pipeline/src/: error.rs  flow.rs  lib.rs  orchestrate.rs  progress.rs  source.rs  stage.rs
crates/pipeline/tests/golden/: flow_two_region.xml
crates/sync/: Cargo.toml
crates/sync/src/: alignment.rs  drift.rs  error.rs  lib.rs
crates/timeline/src/: asset.rs  error.rs  lib.rs  time.rs  timeline.rs  track.rs
crates/timeline/tests/: properties.rs
docs/: glossary.md
src/: cli.rs  lib.rs  main.rs  media.rs
