[workspace]
members = [".", "crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "BUSL-1.1"
authors = ["Data Clique Software Design FZCO"]
repository = "https://github.com/dataclique/hollywood"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
# Zero tolerance for panics in non-test code
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unreachable = "deny"
unimplemented = "deny"
indexing_slicing = "deny"

enum_glob_use = "deny"

pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

doc_markdown = "allow"
items_after_statements = "allow"
missing_const_for_fn = "allow"
missing_docs_in_private_items = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
redundant_pub_crate = "allow"

# Central version catalog. Crates reference these with `<dep>.workspace = true`
# so the whole workspace moves in lockstep.
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
clap = { version = "4", features = ["derive", "env"] }
apalis = "0.7.4"
apalis-sql = { version = "0.7.4", features = ["sqlite"] }
num-rational = "0.4"
num-traits = "0.2"
proptest = "1"
quick-xml = "0.40"

# Desktop shell (ADR 0005 — pin exact minor; wgpu is eframe's default renderer).
eframe = "0.34"
rfd = "0.17"

# Media I/O. ffmpeg-next 8.x tracks FFmpeg 8; the dev shell pins the libraries.
ffmpeg-next = "8"

# Audio DSP. realfft wraps rustfft for real-signal FFT (cross-correlation sync).
realfft = "3.5.0"

# Intra-workspace crates.
hollywood-detect.path = "crates/detect"
hollywood-ffmpeg.path = "crates/ffmpeg"
hollywood-gui.path = "crates/gui"
hollywood-sync.path = "crates/sync"
hollywood-timeline.path = "crates/timeline"

[package]
name = "hollywood"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Pure-Rust video pre-editing automation: trims dead air, syncs audio, and exports NLE-ready timelines for Resolve/Final Cut and Premiere."
default-run = "hollywood"

[dependencies]
# Media I/O. ffmpeg-next 8.x tracks FFmpeg 8; the dev shell pins the matching
# FFmpeg libraries so the native link is reproducible.
ffmpeg-next.workspace = true
apalis-sql.workspace = true
clap.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
hollywood-gui.workspace = true

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
