[package]
name = "hollywood-assemble"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Assemble a trimmed timeline from silence-detection keep regions (removing dead air)."

[dependencies]
hollywood-timeline.workspace = true
thiserror.workspace = true

[lints]
workspace = true
