[package]
name = "hollywood-timeline"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Hollywood's timeline intermediate representation: the multi-track timeline model every subsystem reads and writes."

[dependencies]
num-rational.workspace = true
num-traits.workspace = true
thiserror.workspace = true

[lints]
workspace = true

[dev-dependencies]
proptest.workspace = true
