[package]
name = "hollywood-nle"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Hand-written NLE interchange exporters (FCP7 xmeml, FCPXML, OpenTimelineIO) for the Hollywood timeline IR."

[dependencies]
hollywood-timeline.workspace = true
quick-xml.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
